--- a/taxistas.html
+++ b/taxistas.html
@@ -171,7 +171,7 @@
                             <h2 class="prb"> MODIFICAR CLIENTE </h2>
                         </button></div>
 
-                        <p>NOTA: PARA MODIFICAR LOS DATOS DE UN AUTOMOVIL DEBE IR AL APARTADO. <a href="pagos.html"> IR AQUI</a></p>
+                        <p>NOTA: PARA MODIFICAR LOS DATOS DE UN AUTOMOVIL DEBE IR AL APARTADO. <a href="carros.html"> IR AQUI</a></p>
 
                 </section>
             </form>
