--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
    <title>Sistema de Administracion de Taxis</title>
+   <script src="initialScript.js"></script>
 </head>
 <body>
 
