--- a/reportes.html
+++ b/reportes.html
@@ -14,6 +14,7 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link rel="icon" href="img/opengraph.png">
+    <script src="initialScript.js"></script>
 </head>
 
 <body>
