--- a/login.html
+++ b/login.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
     <link rel="stylesheet" href="styleslogin.css">
-    <script src="initialScript.js"></script>
+    <script src="js/initialScript.js"></script>
 </head>
 
 
 <body>
     <form id="form-login" class="login">
         <h2>LIVECAR - INICIO DE SESION</h2>
-        <input type="text" placeholder="&#128272; Correo" name="correo">
+        <input type="email" placeholder="&#128272; Correo" name="correo">
         <input type="password" placeholder="&#128272; Contraseña" name="contraseña">
 
             <input  type="submit"  value="Ingresar" name="boton_enviar" id="">
