--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
     <form id="form-login" class="login">
         <h2>LIVECAR - INICIO DE SESION</h2>
         <input type="email" placeholder="&#128272; Correo" name="correo">
-        <input type="password" placeholder="&#128272; Contraseña" name="contraseña">
+        <input type="password" placeholder="&#128272; Contraseña" name="contraseña" minlength="6" maxlength="12">
 
             <input  type="submit"  value="Ingresar" name="boton_enviar" id="">
             <br>
