--- a/login.html
+++ b/login.html
@@ -12,13 +12,13 @@
 
 <body>
     <form id="form-login" class="login">
-        <h2>LIVECAR - INICIO DE SESION</h2>
+        <h2>LIVECAR - INICIO DE SESI&Oacute;ON</h2>
         <input type="email" placeholder="&#128272; Correo" name="correo">
         <input type="password" placeholder="&#128272; Contraseña" name="contraseña" minlength="6" maxlength="12">
 
             <input  type="submit"  value="Ingresar" name="boton_enviar" id="">
             <br>
-            <a href="index.html" class="olvidar_contra">Olvidaste la contraseña?</a>
+            <a href="index.html" class="olvidar_contra">¿Olvidaste la contraseña?</a>
         
     </form>
 
