--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 
 
 <body>
-  <form id="form-login" class="login" onsubmit="sendData()">
+  <form id="form-login" class="login">
     <h2>LIVECAR - INICIO DE SESI&Oacute;N</h2>
     <input type="email" placeholder="&#128272; Correo" name="correo">
     <input type="password" placeholder="&#128272; Contraseña" name="contraseña" minlength="6" maxlength="12">
