--- a/login.html
+++ b/login.html
@@ -13,8 +13,8 @@
 <body>
   <form id="form-login" class="login">
     <h2>LIVECAR - INICIO DE SESI&Oacute;N</h2>
-    <input type="email" placeholder="&#128272; Correo" name="email">
-    <input type="password" placeholder="&#128272; Contraseña" name="password" minlength="6" maxlength="12">
+    <input type="email" placeholder="&#128272; Correo" name="email" id="email">
+    <input type="password" placeholder="&#128272; Contraseña" name="password" minlength="6" maxlength="12" id="password">
     <input  type="submit"  value="Ingresar" name="boton_enviar" id="login_button">
     <br>
     <a href="index.html" class="olvidar_contra">¿Olvidaste la contraseña?</a>   
