--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
             <div class="tarrif-container">
                 <div class="inner-box"><br><br>
-                    <img class="ima_perfiles" src="images/alejandro.jpg" alt="">
+                    <img class="ima_perfiles" src="images/alejandro.png" alt="">
                     <h2 class="heading-yellow"> ALEJANDRO MORALES</h2>
                     <p>Programador general</p> <hr>
                     <p><b>"Estudiante de ingenieria en informatica, relevantes capacidades del manejo del Frontend. Excelente manejo de la logica de programación bajo el contexto del navegador."</b> </p>
