--- a/reportes.html
+++ b/reportes.html
@@ -32,6 +32,7 @@
                 <a href="reportes.html">Reportes</a>
                 <a href="mantenimiento.html">Mantenimiento</a>
                 <a href="ayuda.html">Ayuda</a>
+                <button class="salir"> SALIR  </button>
 
 
             </nav>
