--- a/login.html
+++ b/login.html
@@ -7,22 +7,21 @@
     <title>LOGIN</title>
     <link rel="stylesheet" href="styleslogin.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <script src="/node_modules/axios/dist/axios.min.js"></script>
+    <script src="./node_modules/axios/dist/axios.min.js"></script>
     <script src="js/initialScript.js"></script>
-</head>
-
-
-<body>
-  <form id="form-login" class="login">
-    <h2>LIVECAR - INICIO DE SESI&Oacute;N</h2>
-    <input type="email" placeholder="&#128272; Correo" name="email" id="email">
-    <input type="password" placeholder="&#128272; Contraseña" name="password" minlength="5" maxlength="12" id="password">
-    <input  type="submit"  value="Ingresar" name="boton_enviar" id="login_button">
-    <br>
-    <a href="index.html" class="olvidar_contra">¿Olvidaste la contraseña?</a>   
-  </form>
-
-<!-- FORMDATA DE EL LOGIN-->
-<script src="js/login.js"></script>
+  </head>
+  
+  
+  <body>
+    <form id="form-login" class="login">
+      <h2>LIVECAR - INICIO DE SESI&Oacute;N</h2>
+      <input type="email" placeholder="&#128272; Correo" name="email" id="email">
+      <input type="password" placeholder="&#128272; Contraseña" name="password" minlength="5" maxlength="12" id="password">
+      <input  type="submit"  value="Ingresar" name="boton_enviar" id="login_button">
+      <br>
+      <a href="index.html" class="olvidar_contra">¿Olvidaste la contraseña?</a>   
+    </form>
+    <script src="js/utils.js"></script>
+    <script src="js/login.js"></script>
 </body>
 </html>
