--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -28,6 +28,7 @@
                 <a href="reportes.html">Reportes</a>
                 <a href="mantenimiento.html">Mantenimiento</a>
                 <a href="ayuda.html">Ayuda</a>
+                <button class="salir"> SALIR  </button>
 
 
             </nav>
