--- a/taxistas.html
+++ b/taxistas.html
@@ -28,7 +28,7 @@
                 <a href="reportes.html">Reportes</a>
                 <a href="mantenimiento.html">Mantenimiento</a>
                 <a href="ayuda.html">Ayuda</a>
-
+                <button class="salir"> SALIR  </button>
 
             </nav>
             <a href="#" id="menu-bars" class="fas fa-bars"></a>
