--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>LOGIN</title>
     <link rel="stylesheet" href="styleslogin.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <script src="./node_modules/axios/dist/axios.min.js"></script>
+    <script src="js/axios.min.js"></script>
     <script src="js/initialScript.js"></script>
   </head>
   
