--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styleslogin.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script src="js/axios.min.js"></script>
-    <script src="node_modules/crypto-js/crypto-js.js"></script>
+    <script src="js/crypto-js/crypto-js.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/initialScript.js"></script>
   </head>
