--- a/clientes.html
+++ b/clientes.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
     <title>Sistema de Administracion de Taxis</title>
+    <script src="js/axios.min.js"></script>
+    <script src="js/crypto-js/crypto-js.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/initialScript.js"></script>
 </head>
 
