--- a/reportes.html
+++ b/reportes.html
@@ -16,6 +16,9 @@
     <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link rel="icon" href="img/opengraph.png">
+    <script src="js/axios.min.js"></script>
+    <script src="js/crypto-js/crypto-js.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/initialScript.js"></script>
 </head>
 
