--- a/servicios.html
+++ b/servicios.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Sistema de Administracion de Taxis</title>
+    <script src="js/axios.min.js"></script>
+    <script src="js/crypto-js/crypto-js.js"></script>
+    <script src="js/utils.js"></script>
     <script src="js/initialScript.js"></script>
 </head>
 
