--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <div id="footer">Copyright 2022. Todos los derechos reservados <br>
         Maracaibo, EDO Zulia, Venezuela <br></div>
 </body>
