--- a/reportes.html
+++ b/reportes.html
@@ -155,6 +155,6 @@
               <div id="footer">Copyright 2022. Todos los derechos reservados <br>
                 Maracaibo, EDO Zulia, Venezuela <br></div>
 
-                <script src="script.js"></script>
+                <script src="js/script.js"></script>
 </body>
 </html>
