--- a/pagos.html
+++ b/pagos.html
@@ -96,7 +96,7 @@
 
 
 
-    <script src="script.js">  
+    <script src="js/script.js"></script>
     
     </script>
     <div id="footer">Copyright 2022. Todos los derechos reservados <br>
