--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
             <div class="inner-content">
                 <h2 align="center">LIVECAR - SISTEMA DE ADMINISTRACION DE TAXIS</h2>
 
-                <p> <b>Live Car </b> es un sistema de administración de taxis el cual está dirigido hacia los encargados de una
+                <p> 
+                    <b>Live Car </b> es un sistema de administración de taxis el cual está dirigido hacia los encargados de una
                     empresa de transporte de taxis, por ende este software va a ser manejado por el personal autorizado
                     el cual dicte la empresa, que en este caso sería el administrador del sistema. El propósito de Live
                     Car es que los que usen el software puedan administrar de la mejor manera su empresa de transporte,
                     esto lo podemos corroborar a través de las secciones que tiene el mismo que son: carros, taxistas,
-                    reportes, mantenimiento, clientes, pagos, servicios y ayuda</p>
-
+                    reportes, mantenimiento, clientes, pagos, servicios y ayuda
+                </p>
             </div>
 
             <!-- cuadro calculadora-->
