--- a/ayuda.html
+++ b/ayuda.html
@@ -16,8 +16,6 @@
 </head>
 
 <body>
-
-
     <div class="carts-container">
         <header class="header">
             <a href="index.html" id="logo"><img src="images/livecar.png" alt=""></a>
@@ -31,8 +29,7 @@
                 <a href="reportes.html">Reportes</a>
                 <a href="mantenimiento.html">Mantenimiento</a>
                 <a href="ayuda.html">Ayuda</a>
-                <button class="salir"> SALIR  </button>
-
+                <button class="salir" onclick="logout()">SALIR</button>
             </nav>
             <a href="#" id="menu-bars" class="fas fa-bars"></a>
         </header>
