--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="reportes.html">Reportes</a>
                 <a href="mantenimiento.html">Mantenimiento</a>
                 <a href="ayuda.html">Ayuda</a>
-                <button class="salir">SALIR</button>
+                <button class="salir" onclick="logout()">SALIR</button>
             </nav>
             <a href="#" id="menu-bars" class="fas fa-bars"></a>
         </header>
