--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -31,7 +31,7 @@
                 <a href="reportes.html">Reportes</a>
                 <a href="mantenimiento.html">Mantenimiento</a>
                 <a href="ayuda.html">Ayuda</a>
-                <button class="salir"> SALIR  </button>
+                <button class="salir" onclick="logout()">SALIR</button>
 
 
             </nav>
