Fixing html and general identation, later i will fix form data

--- a/servicios.html
+++ b/servicios.html
@@ -16,8 +16,6 @@
 </head>
 
 <body>
-
-
     <div class="carts-container">
         <header class="header">
             <a href="index.html" id="logo"><img src="images/livecar.png" alt=""></a>
@@ -36,132 +34,90 @@
             <a href="#" id="menu-bars" class="fas fa-bars"></a>
         </header>
     </div>
-
     <!-- SERVICIOS -->
     <div class="home-container">
         <div class="home-content">
-
             <h2 class="tit_cons"> NUEVO SERVICIO </h2>
             <form id="form-new-service">
                 <section class="form_clientes">
-
                     <h4 class="titulo_form"> SERVICIO</h4>
-
-
-
-
-                    <div class="servicio"> <img class="img_servicio" src="images/inicio.png" alt=""><input
-                            class="controls" type="text" name="text" id="inicio" placeholder="INICIO DEL SERVICIO">
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/inicio.png" alt="">
+                        <input class="controls" type="text" name="text" id="inicio" placeholder="INICIO DEL SERVICIO">
                     </div>
-
-                    <div class="servicio"> <img class="img_servicio" src="images/final.png" alt=""><input
-                            class="controls" type="text" name="text" id="final" placeholder="FINAL DEL SERVICIO"></div>
-
-                    <div class="servicio"> <img class="img_servicio" src="images/kilometros.png" alt=""><input
-                            class="controls" type="text" name="text" id="kilometros"
-                            placeholder="TOTAL KILOMETROS RECORRIDOS"></div>
-
-                    <div class="servicio"> <img class="img_servicio" src="images/precio.png" alt=""><input
-                            class="controls" type="text" name="text" id="precio" placeholder="PRECIO"></div>
-
-                    <div class="servicio"> <img class="img_servicio" src="images/cedula.png" alt=""><input
-                            class="controls" type="text" name="text" id="id_taxista" placeholder="ID DEL TAXISTA"></div>
-
-                    <div class="servicio"> <img class="img_servicio" src="images/cedula.png" alt=""><input
-                            class="controls" type="text" name="text" id="id_taxista" placeholder="ID DEL CLIENTE"></div>
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/final.png" alt="">
+                        <input class="controls" type="text" name="text" id="final" placeholder="FINAL DEL SERVICIO">
+                    </div>
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/kilometros.png" alt="">
+                        <input class="controls" type="text" name="text" id="kilometros" placeholder="TOTAL KILOMETROS RECORRIDOS">
+                    </div>
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/precio.png" alt="">
+                        <input class="controls" type="text" name="text" id="precio" placeholder="PRECIO">
+                    </div>
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/cedula.png" alt="">
+                        <input class="controls" type="text" name="text" id="id_taxista" placeholder="ID DEL TAXISTA">
+                    </div>
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/cedula.png" alt="">
+                        <input class="controls" type="text" name="text" id="id_taxista" placeholder="ID DEL CLIENTE">
+                    </div>
                     <hr>
                     <h2 class="lab">PAGO</h2>
                     <br>
-
-
-                    <div class="servicio"> <img class="img_servicio" src="images/forma_pago.png" alt=""> <input
-                            class="controls" type="text" name="forma_pago" id="forma_pago"
-                            placeholder="Ingrese forma de pago (EFECTIVO/TRANSFERENCIA)">
-                    </div>  
-
-                    <div class="servicio"> <img class="img_servicio" src="images/transferencia.png" alt=""> <input
-                            class="controls" type="text" name="trans" id="transf" placeholder="Ingrese banco(TRASFERENCIA)">
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/forma_pago.png" alt="">
+                        <input class="controls" type="text" name="forma_pago" id="forma_pago" placeholder="Ingrese forma de pago (EFECTIVO/TRANSFERENCIA)">
                     </div>
-
-                    <div class="servicio"> <img class="img_servicio" src="images/comprobante.png" alt=""> <input
-                            class="controls" type="text" name="referencia" id="referencia"
-                            placeholder="Ingrese numero de referencia(TRANSFERENCIA)">
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/transferencia.png" alt="">
+                        <input class="controls" type="text" name="trans" id="transf" placeholder="Ingrese banco(TRASFERENCIA)">
                     </div>
-
-
-
-
-                    <div class="clase"><button input="submit" value="AGREGAR" class="botons">
-                            <h2 class="prb"> CARGAR SERVICIO </h2>
-                        </button></div>
-
-
+                    <div class="servicio">
+                        <img class="img_servicio" src="images/comprobante.png" alt="">
+                        <input class="controls" type="text" name="referencia" id="referencia" placeholder="Ingrese numero de referencia(TRANSFERENCIA)">
+                    </div>
+                    <div class="clase">
+                        <button class="botons">
+                            <h2 class="prb">CARGAR SERVICIO</h2>
+                        </button>
+                    </div>
                 </section>
-                <br><br><br><br><br><br><br>
+                <br><br>
+                <br><br>
+                <br><br>
+                <br>
             </form>
-
-
         </div>
     </div>
-
     <br><br>
     <h2 class="tit_cons"> CONSULTAR / ANULAR </h2>
     <form id="form-con-anu">
         <section class="form_clientes">
-
-            <h4 class="titulo_form"> CONSULTAR / ANULAR SERVICIOS</h4>
-
-
-            <div class="servicio_c"> <img class="img_cons_servicio" src="images/servicio.png" alt="">
-                <input class="controls_usuario_con" type="text" name="nombres" id="nombre"
-                    placeholder="Ingrese el ID del servicio">
-
-               
-            <p></p>
-            <div class="clase" align="left"><button input="submit" value="AGREGAR" class="botons">
-                    <h2 class="prb"> CONSULTAR </h2>
-                </button> <button input="submit" value="AGREGAR" class="botons">
-                    <h2 class="prb"> ANULAR </h2>
-                </button></div>
-
+            <h4 class="titulo_form">CONSULTAR / ANULAR SERVICIOS</h4>
+            <div class="servicio_c">
+                <img class="img_cons_servicio" src="images/servicio.png" alt="">
+                <input class="controls_usuario_con" type="text" name="nombres" id="nombre" placeholder="Ingrese el ID del servicio">
+                <p></p>
+                <div class="clase" align="left">
+                    <button class="botons">
+                    <h2 class="prb">CONSULTAR</h2>
+                </button>
+                <button class="botons">
+                    <h2 class="prb">ANULAR</h2>
+                </button>
+            </div>
         </section>
         <br>
     </form>
-
     <br><br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="js/script.js"></script>
-    <div id="footer">Copyright 2022. Todos los derechos reservados <br>
-        Maracaibo, EDO Zulia, Venezuela <br></div>
+    <footer id="footer">
+        Copyright 2022. Todos los derechos reservados <br>
+        Maracaibo, EDO Zulia, Venezuela <br>
+    </footer>
 </body>
-
 </html>
