--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,10 +13,7 @@
     <script src="js/utils.js"></script>
     <script src="js/initialScript.js"></script>
 </head>
-
 <body>
-
-
     <div class="carts-container">
         <header class="header">
             <a href="index.html" id="logo"><img src="images/livecar.png" alt=""></a>
@@ -32,8 +28,6 @@
                 <a href="mantenimiento.html">Mantenimiento</a>
                 <a href="ayuda.html">Ayuda</a>
                 <button class="salir" onclick="logout()">SALIR</button>
-
-
             </nav>
             <a href="#" id="menu-bars" class="fas fa-bars"></a>
         </header>
@@ -43,83 +37,75 @@
         <div class="home-content">
             <br><br>
             <h2 class="tit_cons"> MANTENIMIENTO </h2>
-
             <section class="form_clientes">
-
                 <h4 class="titulo_form"> PRIVACIDAD</h4>
                 <br>
-                <hr><br>
-
-
+                <hr>
+                <br>
                 <form id="form-mod-password">
                     <h4 class="titulo_form"> MODIFICAR CONTRASEÑA</h4>
-
                     <div class="usuario"> <img class="img_avatar" src="images/cedula.png" alt="">
-                        <input class="controls_usuario" type="password" name="contraseña_actual" id="nombre"
-                            placeholder="Ingrese su contraseña actual">
-                        <input class="controls_apellido" type="password" name="contraseña_nueva" id="apellido"
-                            placeholder="Ingrese su nueva contraseña">
-
+                        <input class="controls_usuario" type="password" name="contraseña_actual" id="nombre" placeholder="Ingrese su contraseña actual">
+                        <input class="controls_apellido" type="password" name="contraseña_nueva" id="apellido" placeholder="Ingrese su nueva contraseña">
                     </div>
-                    <div class="clase"><button input="submit" value="AGREGAR" class="botons">
+                    <div class="clase">
+                        <button input="submit" value="AGREGAR" class="botons">
                             <h2 class="prb"> GUARDAR </h2>
-                        </button></div>
+                        </button>
+                    </div>
                 </form>
-
-
-                <br><br><br>
-                <hr> <br>
+                <br><br>
+                <br>
+                <hr>
+                <br>
                 <form id="form-new-password">
                     <h4 class="titulo_form"> NUEVA CONTRASEÑA</h4>
                     <p>(Al generar una nueva contraseña se eliminaran todos los datos registrados)</p>
-                    <div class="cedula"> <img class="img_cedula" src="images/cedula.png" alt=""><input class="controls"
-                            type="password" name="contraseña_nueva" id="cedula"
-                            placeholder="Ingrese su nueva contraseña"></div>
-                    <div class="clase"><button input="submit" value="AGREGAR" class="botons">
+                    <div class="cedula">
+                        <img class="img_cedula" src="images/cedula.png" alt="">
+                        <input class="controls" type="password" name="contraseña_nueva" id="cedula" placeholder="Ingrese su nueva contraseña">
+                    </div>
+                    <div class="clase">
+                        <button input="submit" value="AGREGAR" class="botons">
                             <h2 class="prb"> GUARDAR </h2>
-                        </button></div>
+                        </button>
+                    </div>
                 </form>
-
             </section>
-
-
             <br><br>
-
         </div>
-        <br><br><br><br>
-    </div> <br>
-
+        <br><br>
+        <br><br>
+    </div>
+    <br>
     <!-- RESPALDO Y RESTAURACION-->
-    <h2 class="tit_cons"> RESPALDO Y RESTAURACION </h2>
-
+    <h2 class="tit_cons"> RESPALDO Y RESTAURACI&Oacute;N</h2>
     <section class="form_clientes">
         <form id="form-bajar-respaldo">
-            <div class="clase" align="left"><button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
+            <div class="clase" align="left">
+                <button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
                     <h2 class="prb"> DESCARGAR RESPALDO </h2>
                 </button>
                 <hr>
-
+            </div>
         </form>
-
-
         <br>
         <form id="form-subir-respaldo">
-        <h4 class="titulo_form"> RESTAURACION DE DATOS</h4>
-        <input type="file" name="respaldo" id="file"><br>
-        <button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
-            <h2 class="prb"> RESTAURAR </h2>
-        </button>
-    </form>
+            <h4 class="titulo_form"> RESTAURACI&Oacute;N DE DATOS</h4>
+            <input type="file" name="respaldo" id="file"><br>
+            <button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
+                <h2 class="prb">RESTAURAR</h2>
+            </button>
+        </form>
     </section>
-    <br><br> <br><br> <br><br>
-
-
-
-
-
+    <br><br>
+    <br><br>
+    <br><br>
     <script src="js/script.js"></script>
-    <div id="footer">Copyright 2022. Todos los derechos reservados <br>
-        Maracaibo, EDO Zulia, Venezuela <br></div>
+    <footer id="footer">
+        Copyright 2022. Todos los derechos reservados <br>
+        Maracaibo, EDO Zulia, Venezuela <br>
+    </footer>
 </body>
 
 </html>
