--- a/taxistas.html
+++ b/taxistas.html
@@ -16,8 +16,6 @@
 </head>
 
 <body>
-
-
     <div class="carts-container">
         <header class="header">
             <a href="index.html" id="logo"><img src="images/livecar.png" alt=""></a>
@@ -32,179 +30,129 @@
                 <a href="mantenimiento.html">Mantenimiento</a>
                 <a href="ayuda.html">Ayuda</a>
                 <button class="salir" onclick="logout()">SALIR</button>
-
             </nav>
             <a href="#" id="menu-bars" class="fas fa-bars"></a>
         </header>
     </div>
-
     <!-- FONDO AMARILLO -->
     <div class="home-container_taxista">
         <div class="home-content">
             <h1 class="titulo">AGREGAR</h1>
-
-
-
-
-
             <!-- FORMULARIO PARA AGREGAR TAXISTAS-->
             <form id="form-add-tax">
                 <section class="form_clientes">
-
                     <h4 class="titulo_form"> AGREGAR TAXISTA</h4>
-
-
-
-
-                    <div class="usuario"> <img class="img_avatar" src="images/avatar.png" alt="">
-                        <input class="controls_usuario" type="text" name="nombre_taxista" id="nombre_taxista"
-                            placeholder="Ingrese nombre del taxista">
-                        <input class="controls_apellido" type="text" name="apellido_taxista" id="apellido"
-                            placeholder="Ingrese apellido del taxista">
+                    <div class="usuario">
+                        <img class="img_avatar" src="images/avatar.png" alt="">
+                        <input class="controls_usuario" type="text" name="nombre_taxista" id="nombre_taxista" placeholder="Ingrese nombre del taxista">
+                        <input class="controls_apellido" type="text" name="apellido_taxista" id="apellido" placeholder="Ingrese apellido del taxista">
                     </div>
-
-                    <div class="telefono"> <img class="img_telefono" src="images/telefono.png" alt=""> <input
-                            class="controls" type="text" name="text" id="tlf_taxista"
-                            placeholder="Ingrese telefono del taxista">
+                    <div class="telefono">
+                        <img class="img_telefono" src="images/telefono.png" alt="">
+                        <input class="controls" type="text" name="text" id="tlf_taxista" placeholder="Ingrese telefono del taxista">
                     </div>
-                    <div class="direccion"> <img class="img_direccion" src="images/ubicacion.png" alt=""><input
-                            class="controls" type="text" name="dir_taxista" id="ubicacion"
-                            placeholder="Ingrese direccion del taxista"></div>
-
-
+                    <div class="direccion">
+                        <img class="img_direccion" src="images/ubicacion.png" alt="">
+                        <input class="controls" type="text" name="dir_taxista" id="ubicacion" placeholder="Ingrese direccion del taxista">
+                    </div>
                     <hr>
                     <br>
                     <!-- DATOS CARROS-->
-                    <h1 class="tit"> DATOS DEL CARRO</h1>
+                    <h1 class="tit">DATOS DEL CARRO</h1>
                     <br>
-
-
-                    <div class="ano"> <img class="img_ano" src="images/ano.png" alt=""> <input
-                            class="controls" type="text" name="ano_carro" id="ano"
-                            placeholder="Ingrese año del vehiculo">
+                    <div class="ano">
+                        <img class="img_ano" src="images/ano.png" alt="">
+                        <input class="controls" type="text" name="ano_carro" id="ano" placeholder="Ingrese año del veh&iacute;culo">
                     </div>
-                    <div class="capacidad"> <img class="img_capacidad" src="images/capacidad.png" alt=""> <input
-                            class="controls" type="text" name="cap_carro" id="capacidad"
-                            placeholder="Ingrese capacidad del vehiculo">
+                    <div class="capacidad">
+                        <img class="img_capacidad" src="images/capacidad.png" alt="">
+                        <input class="controls" type="text" name="cap_carro" id="capacidad" placeholder="Ingrese capacidad del veh&iacute;culo">
                     </div>
-
-                    <div class="mar_mod"> <img class="img_mar_mod" src="images/auto.png" alt="">
-                        <input class="controls_usuario" type="text" name="marca_carro" id="marca"
-                            placeholder="Ingrese marca del vehiculo">
-                        <input class="controls_apellido" type="text" name="modelo_carro" id="modelo"
-                            placeholder="Ingrese modelo del vehiculo">
+                    <div class="mar_mod">
+                        <img class="img_mar_mod" src="images/auto.png" alt="">
+                        <input class="controls_usuario" type="text" name="marca_carro" id="marca" placeholder="Ingrese marca del veh&iacute;culo">
+                        <input class="controls_apellido" type="text" name="modelo_carro" id="modelo" placeholder="Ingrese modelo del veh&iacute;culo">
                     </div>
-
-                    <div class="matricula"> <img class="img_matricula" src="images/matricula.png" alt=""> <input
-                            class="controls" type="text" name="mat_carro" id="matricula"
-                            placeholder="Ingrese matricula del vehiculo">
+                    <div class="matricula">
+                        <img class="img_matricula" src="images/matricula.png" alt="">
+                        <input class="controls" type="text" name="mat_carro" id="matricula" placeholder="Ingrese matricula del veh&iacute;culo">
                     </div>
-
-                    <div class="clase"><button input="submit" value="AGREGAR" class="botons">
-                            <h2 class="prb"> AGREGAR </h2>
-                        </button></div>
+                    <div class="clase">
+                        <button class="botons">
+                            <h2 class="prb">AGREGAR</h2>
+                        </button>
+                    </div>
                     <p><a href="#">Ver manual de usuario</a></p>
-
                 </section>
             </form>
-
-
         </div>
     </div>
-
-
     <!-- CONSULTAR / ELIMINAR  TAXISTAS-->
     <br><br>
-    <h2 class="tit_cons"> CONSULTAR / ELIMINAR </h2>
+    <h2 class="tit_cons">CONSULTAR / ELIMINAR</h2>
     <form id="form-con-mod-tax">
         <section class="form_clientes">
-
-            <h4 class="titulo_form"> CONSULTAR / ELIMINAR TAXISTAS</h4>
-            <div class="usuario"> <img class="img_avatar" src="images/avatar.png" alt="">
-                <input class="controls_usuario" type="text" name="id_taxista" id="nombre"
-                    placeholder="Ingrese el ID del taxista">
-
-                <input class="controls_apellido" type="text" name="nombre_taxista" id="apellido"
-                    placeholder="Ingrese el nombre del taxista">
+            <h4 class="titulo_form">CONSULTAR / ELIMINAR TAXISTAS</h4>
+            <div class="usuario">
+                <img class="img_avatar" src="images/avatar.png" alt="">
+                <input class="controls_usuario" type="text" name="id_taxista" id="nombre" placeholder="Ingrese el ID del taxista">
+                <input class="controls_apellido" type="text" name="nombre_taxista" id="apellido" placeholder="Ingrese el nombre del taxista">
             </div>
             <p></p>
             <div class="clase" align="left">
-                <button input="submit" value="Consultar" class="botons" id="consultar_taxista">
-                    <h2 class="prb"> CONSULTAR </h2>
-                </button> <button input="submit" value="AGREGAR" class="botons" id="elimnar_taxista">
-                    <h2 class="prb"> ELIMINAR </h2>
-                </button></div>
-
+                <button class="botons" id="consultar_taxista">
+                    <h2 class="prb">CONSULTAR</h2>
+                </button>
+                <button class="botons" id="elimnar_taxista">
+                    <h2 class="prb">ELIMINAR</h2>
+                </button>
+            </div>
         </section>
     </form>
-
-
-
-
-    <br><br><br><br><br>
-
+    <br><br>
+    <br><br>
+    <br>
     <!-- MODFICAR TAXISTA-->
-
     <div class="home-container_clientes2">
         <div class="home-content">
-            <h2 class="tit_cons"> MODIFICAR </h2>
+            <h2 class="tit_cons">MODIFICAR</h2>
             <form id="form-mod-taxista" >
                 <section class="form_clientes">
-
-                    <h4 class="titulo_form"> MODIFICAR TAXISTA</h4>
-
-
-                    <div class="cedula"> <img class="img_cedula" src="images/cedula.png" alt=""><input class="controls"
-                            type="text" name="id_taxista" id="cedula"
-                            placeholder="Ingrese su ID del taxista que deseas modificar"></div>
-
-                    <div class="usuario"> <img class="img_avatar" src="images/avatar.png" alt="">
-                        <input class="controls_usuario" type="text" name="nombre_taxista" id="nombre"
-                            placeholder="Ingrese su nombre">
-                        <input class="controls_apellido" type="text" name="apellido_taxista" id="apellido"
-                            placeholder="Ingrese su apellido">
+                    <h4 class="titulo_form">MODIFICAR TAXISTA</h4>
+                    <div class="cedula">
+                        <img class="img_cedula" src="images/cedula.png" alt="">
+                        <input class="controls" type="text" name="id_taxista" id="cedula" placeholder="Ingrese su ID del taxista que deseas modificar">
                     </div>
-
-                    <div class="cedula"> <img class="img_cedula" src="images/ubicacion.png" alt=""><input class="controls"
-                            type="text" name="dir_taxista" id="direccion_taxista" placeholder="Ingrese su direccion"></div>
-
-                    <div class="telefono"> <img class="img_telefono" src="images/telefono.png" alt=""> <input
-                            class="controls" type="text" name="tlf_taxista" id="telefono" placeholder="Ingrese su telefono">
+                    <div class="usuario">
+                        <img class="img_avatar" src="images/avatar.png" alt="">
+                        <input class="controls_usuario" type="text" name="nombre_taxista" id="nombre" placeholder="Ingrese su nombre">
+                        <input class="controls_apellido" type="text" name="apellido_taxista" id="apellido" placeholder="Ingrese su apellido">
                     </div>
-
-                    <div class="clase"><button input="submit" value="AGREGAR" class="botons">
-                            <h2 class="prb"> MODIFICAR CLIENTE </h2>
-                        </button></div>
-
-                        <p>NOTA: PARA MODIFICAR LOS DATOS DE UN AUTOMOVIL DEBE IR AL APARTADO. <a href="carros.html"> IR AQUI</a></p>
-
+                    <div class="cedula">
+                        <img class="img_cedula" src="images/ubicacion.png" alt="">
+                        <input class="controls" type="text" name="dir_taxista" id="direccion_taxista" placeholder="Ingrese su direccion">
+                    </div>
+                    <div class="telefono">
+                        <img class="img_telefono" src="images/telefono.png" alt="">
+                        <input class="controls" type="text" name="tlf_taxista" id="telefono" placeholder="Ingrese su telefono">
+                    </div>
+                    <div class="clase">
+                        <button class="botons">
+                            <h2 class="prb">MODIFICAR TAXISTA</h2>
+                        </button>
+                    </div>
+                    <p>
+                        NOTA: PARA MODIFICAR LOS DATOS DE UN AUTOMOVIL DEBE IR AL APARTADO. 
+                        <a href="carros.html">IR AQUI</a>
+                    </p>
                 </section>
             </form>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="js/script.js"></script>
-    <div id="footer">Copyright 2022. Todos los derechos reservados <br>
-        Maracaibo, EDO Zulia, Venezuela <br></div>
+    <footer id="footer">
+        Copyright 2022. Todos los derechos reservados <br>
+        Maracaibo, EDO Zulia, Venezuela <br>
+    </footer>
 </body>
-
 </html>
