--- a/clientes.html
+++ b/clientes.html
@@ -39,16 +39,12 @@
             <h2 class="tit_cons"> CONSULTAR / ELIMINAR </h2>
             <form id="form-con-el-car">
                 <section class="form_clientes">
-        
                     <h4 class="titulo_form"> CONSULTAR / ELIMINAR CLIENTES</h4>
-                    <div class="mar_mod"> <img class="img_mar_mod" src="images/auto.png" alt="">
-                        <input class="controls_usuario" type="text" name="id_cliente" id="id_cliente"
-                            placeholder="Ingrese el ID del cliente">
-    
-                        <input class="controls_apellido" type="text" name="cedula_cliente" id="cedula_cliente"
-                            placeholder="Ingrese la c&eacute;dula del cliente">
+                    <div class="mar_mod">
+                        <img class="img_mar_mod" src="images/auto.png" alt="">
+                        <input class="controls_usuario" type="text" name="id_cliente" id="id_cliente" placeholder="Ingrese el ID del cliente">    
+                        <input class="controls_apellido" type="text" name="cedula_cliente" id="cedula_cliente" placeholder="Ingrese la c&eacute;dula del cliente">
                     </div>
-                    <p></p>
                     <div class="clase" align="left">
                         <button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
                             <h2 class="prb">CONSULTAR</h2>
