Fixing clients html file

--- a/clientes.html
+++ b/clientes.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Sistema de Administracion de Taxis</title>
     <script src="js/axios.min.js"></script>
     <script src="js/crypto-js/crypto-js.js"></script>
@@ -33,11 +34,43 @@
             <a href="#" id="menu-bars" class="fas fa-bars"></a>
         </header>
     </div>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <h2 class="tit_cons">AGREGAR</h2>
+    <form id="form-add-client">
+        <section class="form_clientes">
+            <h4 class="titulo_form">AGREGAR CLIENTE</h4>
+            <div class="cedula">
+                <img class="img_cedula" src="images/cedula.png" alt="">
+                <input class="controls" type="number" name="cedula" id="client_ci" placeholder="Ingrese la c&eacute;dula del cliente">
+            </div>
+            <div class="mar_mod">
+                <img class="img_capacidad" src="images/avatar.png" alt=""> 
+                <input class="controls_usuario" type="text" name="nombre" id="marca" placeholder="Ingrese nombre del Cliente">
+                <input class="controls_apellido" type="text" name="apellido" id="modelo" placeholder="Ingrese apellido del Cliente">
+            </div>
+            <div class="capacidad">
+                <img class="img_capacidad" src="images/telefono.png" alt=""> 
+                <input class="controls" type="text" name="telefono" id="capacidad" placeholder="Ingrese n&uacute;mero del cliente">
+            </div>
+            <span class="error-text" id="client-error-text"></span>
+            <div class="clase">
+                <button input="submit" value="AGREGAR" class="botons">
+                    <h2 class="prb">AGREGAR</h2>
+                </button>
+            </div>
+        </section>
+        <br><br>
+        <br><br>
+        <br><br>
+    </form>
     <div class="home-container">
         <div class="home-content">
             <!-- FORMULARIO PARA CONSULTAR CLIENTES-->
             <h2 class="tit_cons"> CONSULTAR / ELIMINAR </h2>
-            <form id="form-con-el-car">
+            <form id="form-get-client">
                 <section class="form_clientes">
                     <h4 class="titulo_form"> CONSULTAR / ELIMINAR CLIENTES</h4>
                     <div class="mar_mod">
@@ -45,11 +78,12 @@
                         <input class="controls_usuario" type="text" name="id_cliente" id="id_cliente" placeholder="Ingrese el ID del cliente">    
                         <input class="controls_apellido" type="text" name="cedula_cliente" id="cedula_cliente" placeholder="Ingrese la c&eacute;dula del cliente">
                     </div>
+                    <span class="error-text" id="client-get-error-text"></span>
                     <div class="clase" align="left">
-                        <button id="consultar_carro" input="submit" value="AGREGAR" class="botons">
+                        <button id="get_client" class="botons">
                             <h2 class="prb">CONSULTAR</h2>
                         </button>
-                        <button id="" input="submit" value="AGREGAR" class="botons">
+                        <button id="delete_client" class="botons">
                             <h2 class="prb">ELIMINAR</h2>
                         </button>
                     </div>
@@ -62,33 +96,26 @@
     </div>
     <!-- Modificar cliente-->
     <br>
-    <h2 class="tit_cons"> MODIFICAR </h2>
+    <h2 class="tit_cons">MODIFICAR</h2>
     <form id="form-mod-car">
         <section class="form_clientes">
-            <h4 class="titulo_form"> MODIFICAR CLIENTE</h4>
+            <h4 class="titulo_form">MODIFICAR CLIENTE</h4>
             <div class="cedula"> <img class="img_cedula" src="images/cedula.png" alt="">
-                <input class="controls" type="text" name="text" id="cedula" placeholder="Ingrese la c&eacute;dula del cliente que deseas modificar">
-            </div>
-            <div class="ano">
-                <img class="img_ano" src="images/ano.png" alt="">
-                <input class="controls" type="text" name="year" id="year" placeholder="Ingrese año del vehiculo">
-            </div>
-            <div class="capacidad">
-                <img class="img_capacidad" src="images/capacidad.png" alt=""> 
-                <input class="controls" type="text" name="text" id="capacidad" placeholder="Ingrese capacidad del vehiculo">
+                <input class="controls" type="number" name="text" id="client_ci" placeholder="Ingrese la c&eacute;dula del cliente">
             </div>
             <div class="mar_mod">
-                <img class="img_mar_mod" src="images/auto.png" alt="">
-                <input class="controls_usuario" type="text" name="marca" id="marca" placeholder="Ingrese marca del vehiculo">
-                <input class="controls_apellido" type="text" name="modelo" id="modelo" placeholder="Ingrese modelo del vehiculo">
+                <img class="img_capacidad" src="images/avatar.png" alt=""> 
+                <input class="controls_usuario" type="text" name="marca" id="marca" placeholder="Ingrese nombre del Cliente">
+                <input class="controls_apellido" type="text" name="modelo" id="modelo" placeholder="Ingrese apellido del Cliente">
             </div>
-            <div class="matricula">
-                <img class="img_matricula" src="images/matricula.png" alt="">
-                <input class="controls" type="text" name="matricula" id="matricula" placeholder="Ingrese matricula del vehiculo">
+            <div class="capacidad">
+                <img class="img_capacidad" src="images/telefono.png" alt=""> 
+                <input class="controls" type="text" name="text" id="capacidad" placeholder="Ingrese n&uacute;mero del cliente">
             </div>
+            <span class="error-text" id="client-mod-error-text"></span>
             <div class="clase">
-                <button input="submit" value="AGREGAR" class="botons">
-                    <h2 class="prb"> MODIFICAR </h2>
+                <button class="botons">
+                    <h2 class="prb">MODIFICAR</h2>
                 </button>
             </div>
         </section>
@@ -97,7 +124,7 @@
         <br><br>
         <br>
     </form>
-    <script src="js/script.js"></script>
+    <script src="js/clientes.js"></script>
     <footer id="footer">
         Copyright 2022. Todos los derechos reservados <br>
         Maracaibo, EDO Zulia, Venezuela <br>
