--- a/clientes.html
+++ b/clientes.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="fontawesome-free-5.15.3-web/css/all.min.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <title>Sistema de Administracion de Taxis</title>
     <script src="js/axios.min.js"></script>
     <script src="js/crypto-js/crypto-js.js"></script>
