--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="inner-box">
                     <br><br>
                     <img class="ima_perfiles" src="images/jorge.jpg" alt="">
-                    <h2>JORGE GUTIERREZ</h2>
+                    <h2>JORGE GUTI&Eacute;RREZ</h2>
                     <p><i>Programador general</i></p>
                     <hr>
                     <p>
