--- a/taxistas.html
+++ b/taxistas.html
@@ -149,7 +149,7 @@
             </form>
         </div>
     </div>
-    <script src="js/script.js"></script>
+    <script src="js/taxistas.js"></script>
     <footer id="footer">
         Copyright 2022. Todos los derechos reservados <br>
         Maracaibo, EDO Zulia, Venezuela <br>
