--- a/ayuda.html
+++ b/ayuda.html
@@ -44,9 +44,9 @@
                 <section class="form_clientes">
                     <h4 class="titulo_form">MANUALES</h4>
                     <div class="clase" align="left">
-                        <button id="manual_usuario" input="submit" value="USUARIO" class="botons ayu">
+                        <a id="manual_usuario" class="botons ayu" href="">
                             <h2 class="prb"> MANUAL DE USUARIO </h2>
-                        </button>
+                        </a>
                         <button id="manual_analista" input="submit" value="ANALISTA" class="botons ayu2">
                             <h2 class="prb"> MANUAL DE ANALISTA </h2>
                         </button>
