--- a/ayuda.html
+++ b/ayuda.html
@@ -44,12 +44,12 @@
                 <section class="form_clientes">
                     <h4 class="titulo_form">MANUALES</h4>
                     <div class="clase" align="left">
-                        <a id="manual_usuario" class="botons ayu" href="">
+                        <a id="manual_usuario" class="botons ayu" href="/" target="_blank">
                             <h2 class="prb"> MANUAL DE USUARIO </h2>
                         </a>
-                        <button id="manual_analista" input="submit" value="ANALISTA" class="botons ayu2">
+                        <a id="manual_analista" class="botons ayu2" href="https://issuu.com/romulo5055/docs/manual_de_analista_live_car.docx_2b0355dc3c9b0d" target="_blank">
                             <h2 class="prb"> MANUAL DE ANALISTA </h2>
-                        </button>
+                        </a>
                     </div>
                 </section>
                 <br><br>
