--- a/ayuda.html
+++ b/ayuda.html
@@ -44,7 +44,7 @@
                 <section class="form_clientes">
                     <h4 class="titulo_form">MANUALES</h4>
                     <div class="clase" align="left">
-                        <a id="manual_usuario" class="botons ayu" href="/" target="_blank">
+                        <a id="manual_usuario" class="botons ayu" href="https://issuu.com/romulo5055/docs/manual_de_usuario.docx_619695270000eb" target="_blank">
                             <h2 class="prb"> MANUAL DE USUARIO </h2>
                         </a>
                         <a id="manual_analista" class="botons ayu2" href="https://issuu.com/romulo5055/docs/manual_de_analista_live_car.docx_2b0355dc3c9b0d" target="_blank">
