--- a/clientes.html
+++ b/clientes.html
@@ -79,6 +79,7 @@
                         <input class="controls_apellido" type="text" name="cedula_cliente" id="cedula_cliente" placeholder="Ingrese la c&eacute;dula del cliente">
                     </div>
                     <span class="error-text" id="client-get-error-text"></span>
+                    <span class="response" id="client-get-response"></span>
                     <div class="clase" align="left">
                         <button id="get_client" class="botons">
                             <h2 class="prb">CONSULTAR</h2>
