--- a/taxistas.html
+++ b/taxistas.html
@@ -77,6 +77,7 @@
                         <img class="img_matricula" src="images/matricula.png" alt="">
                         <input class="controls" type="text" name="mat_carro" id="matricula" placeholder="Ingrese matricula del veh&iacute;culo">
                     </div>
+                    <span class="error-text" id="taxista-error-text"></span>
                     <div class="clase">
                         <button class="botons">
                             <h2 class="prb">AGREGAR</h2>
